@@ -1,3 +1,4 @@
 @CO	Test cases:
 read1	0	chr2	23641567	25	9M	*	0	5	GCAGAAAAT	FFFabFdFF
 read2	0	chr2	23641577	25	267M	*	0	500	GCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATGCAACATGGGTGTTAAAATA	STARTFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEND	mc:i:23641564	X0:i:1	MD:Z:2	AS:i:1
+noqual	0	chr2	23641577	25	1M	*	0	500	T	*	mc:i:23641564	X0:i:1	MD:Z:2	AS:i:1
